Add initial structural planning

--- a/Toolblox.Tests/Toolblox.Tests.csproj
+++ b/Toolblox.Tests/Toolblox.Tests.csproj
@@ -12,4 +12,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Toolblox\Toolblox.csproj" />
+  </ItemGroup>
 </Project>
