Refactor namespaces and add all example tests for strings block interfaces

--- a/Toolblox.Tests/Toolblox.Tests.csproj
+++ b/Toolblox.Tests/Toolblox.Tests.csproj
@@ -15,4 +15,12 @@
   <ItemGroup>
     <ProjectReference Include="..\Toolblox\Toolblox.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="Extensions\" />
+    <None Remove="Extensions\Strings\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+    <Folder Include="Extensions\Strings\" />
+  </ItemGroup>
 </Project>
