--- a/Toolblox/Toolblox.csproj
+++ b/Toolblox/Toolblox.csproj
@@ -5,13 +5,13 @@
     <PackageId>cognophile_toolblox</PackageId>
     <PackageVersion>0.0.1</PackageVersion>
     <Authors>cognophile</Authors>
-    <Description>A one-stop utilities and helpers library for .NET.</Description>
+    <Description>A one-stop library for common utilities for developing .NET applications</Description>
     <Copyright>cognophile_2021</Copyright>
     <NeutralLanguage>en-GB</NeutralLanguage>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Owners>cognophile</Owners>
     <PackageProjectUrl>https://github.com/cognophile/Toolblox</PackageProjectUrl>
-    <Summary>A one-stop utilities and helpers library for .NET.</Summary>
+    <Summary>A one-stop library for common utilities for developing .NET applications</Summary>
     <PackageTags>utilities, helpers, library</PackageTags>
     <Title>Toolblox</Title>
     <PackageIconUrl>https://cdn-icons.flaticon.com/png/512/2923/premium/2923686.png?token=exp=1639831939~hmac=065fa88bbc29fb8a3486e90e663c34ca</PackageIconUrl>
@@ -27,8 +27,8 @@
   <ItemGroup>
     <Folder Include="Blocks\" />
     <Folder Include="Blocks\Extensions\" />
-    <Folder Include="Blocks\Instances\" />
-    <Folder Include="Blocks\Instances\Strings\" />
+    <Folder Include="Blocks\Statics\" />
+    <Folder Include="Blocks\Statics\Strings\" />
     <Folder Include="Blocks\Extensions\Strings\" />
     <Folder Include="Blocks\Base\" />
     <Folder Include="Blocks\Base\Strings\" />
