--- a/Toolblox/Toolblox.csproj
+++ b/Toolblox/Toolblox.csproj
@@ -23,6 +23,8 @@
     <None Remove="Blocks\Extensions\Strings\" />
     <None Remove="Blocks\Base\" />
     <None Remove="Blocks\Base\Strings\" />
+    <None Remove="Assets\" />
+    <None Remove="Assets\Images\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Blocks\" />
@@ -32,5 +34,7 @@
     <Folder Include="Blocks\Extensions\Strings\" />
     <Folder Include="Blocks\Base\" />
     <Folder Include="Blocks\Base\Strings\" />
+    <Folder Include="Assets\" />
+    <Folder Include="Assets\Images\" />
   </ItemGroup>
 </Project>
