--- a/Toolblox/Toolblox.csproj
+++ b/Toolblox/Toolblox.csproj
@@ -25,6 +25,7 @@
     <None Remove="Blocks\Base\Strings\" />
     <None Remove="Assets\" />
     <None Remove="Assets\Images\" />
+    <None Remove="Ardalis.GuardClauses" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Blocks\" />
@@ -36,5 +37,8 @@
     <Folder Include="Blocks\Base\Strings\" />
     <Folder Include="Assets\" />
     <Folder Include="Assets\Images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="3.3.0" />
   </ItemGroup>
 </Project>
