--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"cognophile_Toolblox" /o:"cognophile" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.test.exclusions="Toolblox.Tests/**" /d:sonar.tests="Toolblox.Tests/**" /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"cognophile_Toolblox" /o:"cognophile" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.test.exclusions="Toolblox.Tests/**" /d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"
           dotnet build --configuration Release
           dotnet tool install --global dotnet-coverage
           dotnet restore
