Add numbers block and portion of tests

--- a/Toolblox.Tests/Toolblox.Tests.csproj
+++ b/Toolblox.Tests/Toolblox.Tests.csproj
@@ -39,6 +39,7 @@
     <None Remove="Statics\Json\" />
     <None Remove="Extensions\Object\" />
     <None Remove="Statics\Objects\" />
+    <None Remove="Extensions\Numbers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Extensions\" />
@@ -56,5 +57,6 @@
     <Folder Include="Statics\Json\" />
     <Folder Include="Extensions\Objects\" />
     <Folder Include="Statics\Objects\" />
+    <Folder Include="Extensions\Numbers\" />
   </ItemGroup>
 </Project>
