--- a/Toolblox/Toolblox.csproj
+++ b/Toolblox/Toolblox.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageId>cognophile_toolblox</PackageId>
+    <PackageId>Cognophile.Toolblox</PackageId>
     <PackageVersion>0.0.1</PackageVersion>
     <Authors>cognophile</Authors>
     <Description>A one-stop library for common extension behaviours to aid you in developing your .NET applications.</Description>
